Wed Aug 11 20:56:00 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkinternals.h: 
	* gtk/gtk.symbols: Add shortcuts_model_filter_get_type.

	* gtk/abicheck.sh: Check all symbols.

Wed Aug 11 19:20:34 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtktreeview.c (gtk_tree_view_maybe_begin_dragging_row): 
	Don't start a drag if the treeview is only a 
	drag destination.  (#149836, Pawel Salek)

2004-08-11  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtktreedatalist.[hc]: 
	* gtk/gtkliststore.c:
	* gtk/gtktreestore.c: Underscore-prefix gtk_tree_data_list_compare_func. 

	* gtk/gtk.symbols: Remove gtk_tree_data_list_compare_func.

	* gtk/makegtkalias.pl: No need to include gtktreedatalist.h any more.

2004-08-10  Matthias Clasen  <mclasen@redhat.com>

	* gdk/Makefile.am: 
	* gtk/Makefile.am: Define TESTS, not TEST, so that make check
	actually triggers abicheck.sh.

	* gdk/makegdkalias.pl: 
	* gtk/makegtkalias.pl: Include glib.h before using glib symbols. D'oh.

	* gdk/makegdkalias.pl: 
	* gtk/makegtkalias.pl: Protect gtkalias.h by G_HAVE_GNUC_VISIBILITY.
	
	* gtk/Makefile.am: Include gtkalias.h in the generated
	sources gtkmarhalers.c and gtkmarshal.c.

	* gtk/makegtkalias.pl: Cosmetic fix.

	* gdk/Makefile.am: Remove the . which was accidentally added
	to SUBDIRS. Include gdkalias.h in the generated sources 
	gdkenumtypes.c and gdkmarshalers.c.

	* gdk/makegdkalias.pl: Cosmetic fix.

	* gdk/Makefile.am: Add gdkalias.h to BUILT_SOURCES.

2004-08-09  Hans Breuer  <hans@breuer.org>

	* gtk/makefile.msc.in : autogenerate gtk.def, cleanup

	* gdk/win32/gdkwindow-win32.c gdk/win32/gdkevents-win32.c : 
	removed long time unused ifdef/ed code (WITHOUT_WM_CREATE), 
	removed duplicated call to gdk_window_set_cursor()

Mon Aug  9 15:41:17 2004  Matthias Clasen  <maclas@gmx.de>

	Add hidden aliases for exported symbols which are
	used internally in order to get rid of many PLT 
	entries.  (#145519, Arjan van de Ven)
	
	* gdk/Makefile.am: Add rules to generate gdk.def and 